# pyhl7

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
scripts/: generate_handlers.py
src/pyhl7/: __init__.py  core.py  schema.json
tests/: test_core.py
