[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhl7"
version = "0.1.0"
authors = [
  { name="Sai Pavan Kumar Veeranki", email="sai.veeranki@gmail.com" },
]
description = "Advanced HL7 V2.x Message Engine for Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["src"]
