[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhl7"
version = "1.0"
authors = [
  { name="Sai Pavan Kumar Veeranki", email="sai.veeranki@gmail.com" },
]
description = "Advanced HL7 V2.x Message Engine for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["hl7", "health-it", "pandas", "medical-data", "v2-parser", "clinical-data"]
dependencies = [
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/saiveeranki/pyhl7"
Repository = "https://github.com/saiveeranki/pyhl7.git"
Issues = "https://github.com/saiveeranki/pyhl7/issues"
Documentation = "https://github.com/saiveeranki/pyhl7#readme"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["src"]
